--- a/src/jdbc.properties
+++ b/src/jdbc.properties
@@ -1,5 +1,5 @@
-#JDBC properties entry for ORACLE server
-driver = oracle.jdbc.OracleDriver
-url=jdbc:oracle:thin:@localhost:1521:xe
-#username=SYSTEM
-#password=root
+#JDBC properties entry for MYSQL server
+driver = com.mysql.cj.jdbc.Driver
+url=jdbc:mysql://localhost:3306/goodlucky
+username=root
+password=12345
